Added View.FullScreen command.

--- a/src/Gemini/Properties/Resources.de.resx
+++ b/src/Gemini/Properties/Resources.de.resx
@@ -276,4 +276,10 @@
   <data name="FileNewCommandToolTip" xml:space="preserve">
     <value>Neu</value>
   </data>
+  <data name="ViewFullScreenCommandText" xml:space="preserve">
+    <value>Vollbild</value>
+  </data>
+  <data name="ViewFullScreenCommandToolTip" xml:space="preserve">
+    <value>Vollbild</value>
+  </data>
 </root>
